# rp-vio

./: README.md  index.html  rpvio.patch
camera_model/: package.xml
config/: advio_12_config.yaml  ol_market1_config.yaml  rpvio_rviz_config.rviz  rpvio_sim_config.yaml  viode_config.yaml
plane_segmentation/: RecoverPlane_perpendicular.py  crf_inference.py  data_loader_new.py  inference.py  net.py  openloris.txt  planerecover_inference.py  requirements.txt  train.py  utils.py
plane_segmentation/pretrained_model/: model.index
resources/: style.css
rpvio_estimator/: CMakeLists.txt  package.xml
rpvio_estimator/launch/: advio_12.launch  ol_market1.launch  rpvio_rviz.launch  rpvio_sim.launch  viode_citynight.launch
rpvio_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
rpvio_estimator/src/factor/: homography_factor.h
rpvio_estimator/src/initial/: initial_alignment.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
rpvio_estimator/src/utility/: visualization.cpp
rpvio_feature_tracker/: CMakeLists.txt  package.xml
rpvio_feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
scripts/: convert_vins_to_tum.py  run_advio_12.sh  run_ol_market1.sh  run_rpvio_sim.sh  run_viode_citynight.sh
