<?xml version="1.0"?>
<package>
  <name>rpvio_feature_tracker</name>
  <version>0.0.0</version>
  <description>The rpvio_feature_tracker package</description>

  <maintainer email="karnikram@gmail.com">karnikram</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>camera_model</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>camera_model</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
